opam-version: "1.2"
maintainer: "Alessandro Strada <alessandro.strada@gmail.com>"
authors: [ "Alessandro Strada" ]
license: "MIT"
homepage: "http://gdfuse.forge.ocamlcore.org/"
dev-repo: "https://github.com/astrada/google-drive-ocamlfuse.git"
bug-reports: "https://github.com/astrada/google-drive-ocamlfuse/issues"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  ["jbuilder" "runtest" "-p" name "-j" jobs]
]
depends: [
  "base-threads" {build}
  "camlidl" {build}
  "gapi-ocaml" {>= "0.3.5"}
  "jbuilder" {build}
  "ocamlfuse"
  "ounit" {test}
  "sqlite3"
]
available: [ ocaml-version >= "4.02.3" ]
