opam-version: "2.0"
maintainer: "Alessandro Strada <alessandro.strada@gmail.com>"
authors: [ "Alessandro Strada" ]
license: "MIT"
homepage: "http://gdfuse.forge.ocamlcore.org/"
dev-repo: "git+https://github.com/astrada/google-drive-ocamlfuse.git"
bug-reports: "https://github.com/astrada/google-drive-ocamlfuse/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.02.3"}
  "base-threads" {build}
  "camlidl" {build}
  "gapi-ocaml" {>= "0.3.13"}
  "dune"
  "ocamlfuse" {>= "2.7.1-cvs6"}
  "cryptokit"
  "extlib"
  "ounit" {with-test}
  "sqlite3"
]
synopsis: "A FUSE filesystem over Google Drive"
description: """
google-drive-ocamlfuse is a FUSE-based file system for Google Drive, written
in OCaml."""
